# gstreamer-onnxruntime-objectdetection

./: .gitattributes  README.md  ThirdPartyNotices.md  meson.build
object-detector/: meson.build
object-detector/examples/: ort-driver.cpp
object-detector/src/: driver.cpp  gstortelement.c  gstortelement.h  gstortobjectdetector.c  gstortobjectdetector.cpp  gstortobjectdetector.h  gstortobjectdetectortest.c  objectdetectionmodel.h  ortclient.cpp  ortclient.h  yolov4.cpp  yolov4.h
object-detector/tests/: gstortobjectdetectortest.c
